--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,7 +303,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 90px;
-  background-color: var(--color-primary);
+  background-color: #fff;
 }
 
 .header.sticked {
