--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,7 +303,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 90px;
-  background-color: var(--color-primary);
+  background-color: #fff;
 }
 
 .header.sticked {
@@ -511,7 +511,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 131, 116, 0.9);
+    background: #000;
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -577,7 +577,7 @@ section {
   }
 
   .mobile-nav-show {
-    color: rgba(255, 255, 255, 0.6);
+    color: #00000099;
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -610,7 +610,7 @@ section {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0, 106, 93, 0.8);
+    background: rgb(255 255 255 / 80%);
     z-index: 9996;
   }
 }
