--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3251,7 +3251,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 131, 116, 0.9);
+    background: #000000;
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -3317,7 +3317,7 @@ section {
   }
 
   .mobile-nav-show {
-    color: rgba(255, 255, 255, 0.6);
+    color: #00000099;
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -3350,7 +3350,7 @@ section {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0, 106, 93, 0.8);
+    background: rgb(255 255 255 / 80%);
     z-index: 9996;
   }
 }
@@ -5483,4 +5483,3 @@ section {
 .loc:hover{
   color: white;
 }
->>>>>>> 9c20c31323947810b0145522d929efa5261c5d98
