--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 :root {
   --color-default: #222222;
   --color-primary: #fffs;
-  --color-secondary: #f85a40;
+  --color-secondary: #4052f8;
 }
 
 /* Smooth scroll behavior */
