--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -605,7 +605,10 @@ section {
     z-index: 9996;
   }
 }
-
+.responsive{
+  width: auto;
+  height: auto;
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
